welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: type mismatch;
 found   : Int(110)
 required: Boolean
	if ((90 <= n <= 110) || (190 <= n =< 210)) {
                        ^nearHundred:4: error: value esle is not a member of Nothing
possible cause: maybe a semicolon is missing before `value esle'?
	} esle {return false
          ^nearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if ((90 <= n <= 110) || (190 <= n =< 210)) {
        ^